--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -13,6 +13,7 @@
         <th scope="col">Unidad de medida</th>
         <th scope="col">Frecuencia</th>
         <th scope="col">Fecha de registro</th>
+        <th scope="col">Editar</th>
         <th scope="col">Eliminar</th>
       </tr>
     </thead>
@@ -26,6 +27,7 @@
         <td>{{ servicio.unidadMedida }}</td>
         <td>{{ servicio.frecuencia }}</td>
         <td>{{ servicio.fechaRegistro }}</td>
+        <td><button type="button" class="btn btn-primary" (click)="redirectEdit(servicio)">Editar</button></td>
         <td><button (click)="delete(servicio)" class="btn btn-danger">Eliminar</button></td>
       </tr>
     </tbody>
